--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
    margin: 0;
    padding: 0;
@@ -6,21 +10,32 @@ body{
    align-items: center;
    
    /* background: url(https://images.unsplash.com/photo-1494390248081-4e521a5940db?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80); */
-   background: url(blog.jfif);
+   /* background: url(https://images.unsplash.com/photo-1612204103649-a544a34978db?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Zm9vZHN0dWZmfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80); */
+   /* background: url(http://images.unsplash.com/photo-1580652893830-5828a20b203e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max); */
+   background: url(bodyimg.jfif);
    background-repeat: no-repeat;
    background-size: cover;
+   margin-right: 0;
    /* overflow: hidden; */
 }
 
+
 .front{
-    background: url(https://images.unsplash.com/photo-1505935428862-770b6f24f629?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80);
-    filter: blur(3px);
-  -webkit-filter: blur(3px);
+    background: url(blogupper1.jpg);
+    /* filter: blur(3px);
+  -webkit-filter: blur(3px); */
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
+   width: 100%;
     height: 450px;
 }
+ .blogtitle{
+    position: absolute; 
+     top:25%;
+    left: 40%;
+    font-size: 8vw; 
+    font-family: cursive;
+}  */
 .blognav{
     position: absolute;
     margin:auto;
@@ -31,16 +46,17 @@ body{
 }
 .blogrow{
     display: grid;
-    grid-template-rows:1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-rows:1fr 1fr; */
+    grid-template-columns: repeat(3,1fr);
     
-    margin: 20px 10px;
-    flex-wrap: wrap;
+    /* margin: 0 10px 20px 10px; */
+    /* flex-wrap: wrap; */
+    margin-top: 0;
 }
 .card{
     display: grid;
-    grid-template-columns: 350px;
-    grid-template-rows: 210px 210px 80px;
+    grid-template-columns: 330px;
+    grid-template-rows: 220px 220px 50px;
     grid-template-areas: "image" "text" "stats";
     margin: 30px 50px;
 
@@ -53,18 +69,26 @@ body{
 }
 .card-image{
     grid-area: image;
-    background: url(masonry.jpg);
+    /* background: url(masonry.jpg); */
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background-size: cover;
+    background-size: -100%;
+    overflow: hidden;
 }
 .card-text{
     grid-area: text;
     margin: 25px;
 }
 .card-text .date{
-color: rgb(255,7,110);
-font-size: 13px;
+color: rgb(241, 131, 57);
+font-size: 18px;
+position: relative;
+left: -90px;
+top:-20px
+}
+.card-text .date i{
+    font-size: 15px;
+    color: gray;
 }
 .card-text p{
     color: grey;
@@ -87,4 +111,81 @@ font-size: 13px;
 .card:hover{
     transform: scale(1.1);
 }
+img{
+    max-width: 100%;
+    max-height: 100%;
+      display: block; /*remove extra space below image  */
+    vertical-align: middle;
+}
+.stat{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-content: center;
+    text-align: center;
+}
+.value{
+margin: auto;
+text-align: center;
+padding-left: 25px;
+
+}
+.card-stats .stat .value i{
+    font-size: 30px;
+    margin-left: 10px;
+}
+
+@media (max-width:1147px){
+    .blogrow{
+        /* grid-template-rows:1fr 1fr; */
+        grid-template-columns: repeat(2,1fr);
+        align-content: center;
+    }    
+    
+}
+@media (max-width:917px){
+    .blogtitle{
+        font-size: 10vw;
+    }  
+    
+}
+@media (max-width:819px){
+    .blogrow{
+        /* grid-template-rows:1fr 1fr; */
+        grid-template-columns: repeat(2,1fr);
+        align-content: center;
+        vertical-align: center;
+        padding-left: 40px;
+    }    
+    .card{
+        grid-template-columns: 300px;
+        margin-left: 10px;
+        margin: 30px 20px;
+    }
+    .blogtitle{
+        font-size: 10vw;
+    }  
+    
+}
+@media (max-width:600px){
+    .blogrow{
+        /* grid-template-rows:1fr 1fr; */
+        grid-template-columns: repeat(1,1fr);
+        align-content: center;
+    }  
+    .blogtitle{
+        font-size: 10vw;
+    }  
+    
+}
+
+/* @media (max-width:1255px){
+    body{
+        background-size: 200%;
+    }
+    .front{
+        background-size: 200%;
+    }
+    
+} */
+
 
