--- a/style.css
+++ b/style.css
@@ -1,232 +1,119 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
-   margin: 0;
-   padding: 0;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   
-   /* background: url(https://images.unsplash.com/photo-1494390248081-4e521a5940db?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80); */
-   /* background: url(https://images.unsplash.com/photo-1612204103649-a544a34978db?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Zm9vZHN0dWZmfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80); */
-   /* background: url(http://images.unsplash.com/photo-1580652893830-5828a20b203e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max); */
-   background: url(bodyimg.jfif);
-   background-repeat: no-repeat;
-   background-size: cover;
-   margin-right: 0;
-   /* overflow: hidden; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+min-height: 100vh;
+background-color: rgb(121, 117, 117)
 }
-
-
-.front{
-    background: url(blogupper1.jpg);
-    /* filter: blur(3px);
-  -webkit-filter: blur(3px); */
-    background-size: cover;
-    background-repeat: no-repeat;
-   width: 100%;
-    height: 450px;
+.contt{
+    justify-content: center;
 }
- .blogtitle{
-    position: absolute; 
-     top:25%;
-    left: 40%;
-    font-size: 8vw; 
-    font-family: cursive;
-}  */
-.blognav{
+.contt h2{
+    font-size: 4.5rem;
+    /* text-align: center; */
+}
+.contt img{
+    width: 80%;
+    justify-content: center;
+    /* height: 50px; */
+}
+.imgr{
+    border-radius: 80%;
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    padding: 15px;
+
+}
+.imgr img{
+    border-radius: 50%;
+}
+.insta,
+.fb,.twi,.linkd{
+    border: 2px solid black;
+    width: 30%;
+    font-size: 1.5rem;
+    border-radius: 5px;
+}
+.insta{
     position: absolute;
-    margin:auto;
-    /* bottom: 300px;
-    left: 20px; */
-    color:black;
-    background: none;
-}
-.blogrow{
-    display: grid;
-    /* grid-template-rows:1fr 1fr; */
-    grid-template-columns: repeat(3,1fr);
-    
-    /* margin: 0 10px 20px 10px; */
-    /* flex-wrap: wrap; */
-    margin-top: 0;
-}
-.card{
-    display: grid;
-    grid-template-columns: 330px;
-    grid-template-rows: 220px 220px 50px;
-    grid-template-areas: "image" "text" "stats";
-    margin: 30px 50px;
-
-    font-family: roboto;
-    border-radius: 18px;
-    background: white;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
-    text-align: center;
-    transition: 0.5s;
-}
-.card-image{
-    grid-area: image;
-    /* background: url(masonry.jpg); */
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-size: -100%;
-    overflow: hidden;
-}
-.card-text{
-    grid-area: text;
-    margin: 25px;
-}
-.card-text .date{
-color: rgb(241, 131, 57);
-font-size: 18px;
-position: relative;
-left: -90px;
-top:-20px
-}
-.card-text .date i{
-    font-size: 15px;
-    color: gray;
-}
-.card-text p{
-    color: grey;
-    font-size: 15px;
-    font-weight: 300;
-}
-.card-text h2{
-    margin-top: 0px;
-    font-size: 28px;
-}
-.card-stats{
-    grid-area:stats;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: rgba(239, 243, 12, 0.89);
-}
-.card:hover{
-    transform: scale(1.1);
-}
-img{
-    max-width: 100%;
-    max-height: 100%;
-      display: block; /*remove extra space below image  */
-    vertical-align: middle;
-}
-.stat{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-content: center;
-    text-align: center;
-}
-.value{
-margin: auto;
-text-align: center;
-padding-left: 25px;
-
-}
-.card-stats .stat .value i{
-    font-size: 30px;
-    margin-left: 10px;
-}
-
-@media (max-width:1147px){
-    .blogrow{
-        /* grid-template-rows:1fr 1fr; */
-        grid-template-columns: repeat(2,1fr);
-        align-content: center;
-    } 
-    .blogtitle{
-        font-size: 12vw;
-        position: absolute; 
-        top:20%;
-       left: 32%;
-    }    
-    .front{
-        height: 450px;
-    }   
+    bottom: 10%;
+    left: 10%;
+    animation-name: updown;
+    animation-duration: 2.5s;
+    -webkit-animation-iteration-count: infinite;
+    border: none;
     
 }
-@media (max-width:917px){
-    .blogtitle{
-        font-size: 14vw;
-        position: absolute; 
-        top:20%;
-       left: 32%;
-    }  
-    
+.fb{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    /* left: %;   */
+    animation-name: updown2;
+    animation-duration: 2.5s;
+    -webkit-animation-iteration-count: infinite;
 }
-@media (max-width:819px){
-    .blogrow{
-        /* grid-template-rows:1fr 1fr; */
-        grid-template-columns: repeat(2,1fr);
-        align-content: center;
-        vertical-align: center;
-        padding-left: 40px;
-    }    
-    .card{
-        grid-template-columns: 290px;
-        margin-left: 10px;
-        margin: 30px 15px 20px 15px;
+.twi{
+    position: absolute;
+    bottom: 25%;
+    right: 1%; 
+    animation-name: updown3;
+    animation-duration: 2.5s;
+    -webkit-animation-iteration-count: infinite;
+}
+.linkd{
+    position: absolute;
+    top: 20%;
+    right: 10%;   
+    animation-name: updown4;
+    animation-duration: 2.5s;
+    -webkit-animation-iteration-count: infinite;
+}  
+@keyframes updown {
+    0%{
+        /* position: relative; */
+        /* bottom: 10%; */
+        /* transform:scale(1.1); */
+        left: 10%;
     }
-    .blogtitle{
-        font-size: 12vw;
-        position: absolute; 
-        top:20%;
-       left: 32%;
-    }  
-    
-}
-@media (max-width:600px){
-    .blogrow{
-        /* grid-template-rows:1fr 1fr; */
-        grid-template-columns: repeat(1,1fr);
-        margin-right: 35px;
-    }  
-    .blogtitle{
-            position: absolute; 
-             top:20%;
-            left: 32%;
-            font-family: cursive;
-            font-size: 14vw;
-        }  
-    }  
-    .front{
-        height: 350px;
-    }  
-    
-}
-@media (max-width:400px){
-    .blogrow{
-        /* grid-template-rows:1fr 1fr; */
-        margin-right: 30px;
-    }  
-    
-    .front{
-        height: 350px;
-    }
-     .blogtitle{
-        position: absolute; 
-         top:20%;
-        left: 35%;
-        font-family: cursive;
-        font-size: 14vw;
-    }  
-    
-}
-
-/* @media (max-width:1255px){
-    body{
-        background-size: 200%;
-    }
-    .front{
-        background-size: 200%;
+    50%{
+        /* position: relative; */
+        /* bottom: 10.5%;  */
+        /* transform:scale(1); */
+        left: 11%;
     }
     
-} */
+}
+@keyframes updown2 {
+    0%{
+        top: 10%;
+    }
+    50%{
+        top: 9%;
+    }
+}
+@keyframes updown3 {
+    0%{
+        bottom: 25%;
+    }
+    50%{
+        bottom: 24%;
+    }
+}
+@keyframes updown4 {
+    0%{
+        right: 10%;
+    }
+    50%{
+        right: 11%;
+    }
+}
 
 
