--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ background-color: rgb(121, 117, 117)
     animation-name: updown;
     animation-duration: 2.5s;
     -webkit-animation-iteration-count: infinite;
-    border: none;
+    /* border: none; */
     
 }
 .fb{
